# onepass-audioclean-ingest

./: .gitignore  CHANGELOG.md  Makefile  README.md  VERSIONING.md  pyproject.toml
configs/: default.yaml
examples/: README.md  commands.md  config.custom.yaml  manifest_sample.jsonl
schemas/: manifest.plan.v1.schema.json  manifest.v1.schema.json  meta.v1.schema.json
scripts/: dev_smoke.py
src/onepass_audioclean_ingest/: __init__.py  batch.py  cli.py  config.py  constants.py  convert.py  deps.py  errors.py  ingest_core.py  logging_utils.py  media.py  meta.py  params.py  probe.py  scan.py  subprocess_utils.py
tests/: conftest.py  test_batch_bad_input_records_failure_and_continues.py  test_batch_continue_on_error.py  test_batch_scan_and_manifest.py  test_check_deps.py  test_cli_smoke.py  test_dry_run_batch_writes_plan_manifest.py  test_dry_run_manifest_order_stable.py  test_dry_run_single_does_not_create_audio.py  test_error_codes_are_strings_and_known.py  test_ingest_convert_mp3_to_wav.py  test_ingest_overwrite_behavior.py  test_ingest_video_mp4_extract_audio.py  test_ingest_video_stream_selection.py  test_log_file_written_in_batch.py  test_meta_probe_fields.py  test_meta_schema.py  test_normalize_changes_filtergraph_in_meta.py  test_overwrite_conflict_error.py  test_schema_manifest_lines_valid.py  test_schema_meta_valid.py  test_video_ingest_records_selected_stream.py  test_workdir_id_stable_for_same_relpath_and_size.py
